min docker image with java 11