@@ -11,13 +11,24 @@ ENV MAVEN_OPTS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 
 RUN mvn package -Dmaven.test.skip=true
 
-FROM openjdk:11-jre-slim
+FROM hirokimatsumoto/alpine-openjdk-11:latest as jlink-package
 
-LABEL maintainer="publicdevop2019hw@gmail.com"
+RUN jlink \
+     --module-path /opt/java/jmods \
+     --compress=2 \
+     --add-modules jdk.jfr,jdk.management.agent,java.base,java.logging,java.xml,jdk.unsupported,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+     --no-header-files \
+     --no-man-pages \
+     --output /opt/jdk-11-mini-runtime
 
-COPY --from=maven ./target/AuthService.jar ./AuthService.jar
+FROM alpine:3.8
 
-EXPOSE 8080 8443
+ENV JAVA_HOME=/opt/jdk-11-mini-runtime
+ENV PATH="$PATH:$JAVA_HOME/bin"
 
+COPY --from=jlink-package /opt/jdk-11-mini-runtime /opt/jdk-11-mini-runtime
+
+COPY --from=maven ./target/AuthService.jar ./
+
+EXPOSE 8443 8080
 CMD java -jar AuthService.jar
-
